man_MANS = \
	metalink_checksum_t.3 \
	metalink_chunk_checksum_t.3 \
	metalink_delete.3 \
	metalink_file_t.3 \
	metalink_parse_fd.3 \
	metalink_parse_file.3 \
	metalink_parse_final.3 \
	metalink_parse_fp.3 \
	metalink_parse_memory.3 \
	metalink_parse_update.3 \
	metalink_parser_context_delete.3 \
	metalink_parser_context_new.3 \
	metalink_piece_hash_t.3 \
	metalink_resource_t.3 \
	metalink_t.3

EXTRA_DIST = $(man_MANS)
